--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<script src="./assets/form.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Document</title>
+    <title>Конкурс</title>
   </head>
   <body>
     <header></header>
